Align fix

--- a/code/CSS/estiloPubli.css
+++ b/code/CSS/estiloPubli.css
@@ -49,7 +49,8 @@ h1 {
 .texto pre{
     font-family: 'Open Sans', sans-serif;
     white-space: pre-line;
-    margin-left: 30px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 .texto::before{
     content: "";
